--- a/charts/opencloud-microservices/templates/settings/deployment.yaml
+++ b/charts/opencloud-microservices/templates/settings/deployment.yaml
@@ -24,7 +24,8 @@ spec:
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
-            {{- include "oc.cors" . |nindent 12 }}
+            {{- include "oc.events" . | nindent 12 }}
+            {{- include "oc.cors" . | nindent 12 }}
             {{- include "oc.cacheStore" . | nindent 12 }}
 
             - name: OC_RUN_SERVICES
@@ -75,13 +76,8 @@ spec:
             - name: SETTINGS_BUNDLES_PATH
               value: /etc/opencloud/custom-roles.json
             {{- end }}
-            - name: SETTINGS_JWT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "secrets.jwtSecret" . }}
-                  key: jwt-secret
 
-            - name: SETTINGS_SERVICE_ACCOUNT_IDS
+            - name: OC_SERVICE_ACCOUNT_ID
               valueFrom:
                 configMapKeyRef:
                   name: {{ include "config.authService" . }}
@@ -92,6 +88,25 @@ spec:
                 secretKeyRef:
                   name: {{ include "secrets.storageSystemSecret" . }}
                   key: api-key
+
+            - name: OC_TRANSFER_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.transferSecret" . }}
+                  key: transfer-secret
+
+            - name: OC_JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.jwtSecret" . }}
+                  key: jwt-secret
+
+            - name: OC_MACHINE_AUTH_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.machineAuthAPIKeySecret" . }}
+                  key: machine-auth-api-key
+
             - name: OC_SYSTEM_USER_ID
               valueFrom:
                 secretKeyRef:
@@ -112,6 +127,9 @@ spec:
               containerPort: 9194
 
           volumeMounts:
+            - name: messaging-system-ca
+              mountPath: /etc/opencloud/messaging-system-ca
+              readOnly: true
           {{- if or .Values.features.roles.customRoles .Values.features.roles.customRolesConfigRef }}
             - name: oc-role-config
               mountPath: /etc/opencloud
@@ -131,4 +149,12 @@ spec:
           configMap:
             name: {{ .Values.features.roles.customRolesConfigRef }}
       {{- end }}
+
+        - name: messaging-system-ca
+          {{ if and (.Values.messagingSystem.external.enabled) (not .Values.messagingSystem.external.tls.certTrusted) }}
+          secret:
+            secretName: {{ include "secrets.messagingSystemCASecret" . }}
+          {{ else }}
+          emptyDir: {}
+          {{ end }}
         {{- include "oc.caVolume" $ | nindent 8}}
