--- a/charts/opencloud-microservices/templates/sharing/deployment.yaml
+++ b/charts/opencloud-microservices/templates/sharing/deployment.yaml
@@ -53,7 +53,7 @@ spec:
             - name: SHARING_DEBUG_ADDR
               value: 0.0.0.0:9151
 
-            - name: SHARING_JWT_SECRET
+            - name: OC_JWT_SECRET
               valueFrom:
                 secretKeyRef:
                   name: {{ include "secrets.jwtSecret" . }}
@@ -109,6 +109,30 @@ spec:
 
             - name: SHARING_USER_JSONCS3_MAX_CONCURRENCY
               value: {{ .Values.services.sharing.maxConcurrency | quote }}
+
+            - name: OC_TRANSFER_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.transferSecret" . }}
+                  key: transfer-secret
+
+            - name: OC_JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.jwtSecret" . }}
+                  key: jwt-secret
+
+            - name: OC_MACHINE_AUTH_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.machineAuthAPIKeySecret" . }}
+                  key: machine-auth-api-key
+
+            - name: OC_SYSTEM_USER_ID
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.storageSystemSecret" . }}
+                  key: user-id
 
             {{- include "oc.caEnv" $ | nindent 12}}
 
