--- a/charts/opencloud-microservices/templates/web/deployment.yaml
+++ b/charts/opencloud-microservices/templates/web/deployment.yaml
@@ -29,6 +29,9 @@ spec:
           volumeMounts:
           - name: {{ include "oc.persistence.dataVolumeName" . }}
             mountPath: /var/lib/opencloud
+          - name: messaging-system-ca
+            mountPath: /etc/opencloud/messaging-system-ca
+            readOnly: true
       {{- end }}
       {{- with $.Values.services.web.additionalInitContainers }}
         {{ toYaml . | nindent 8 }}
@@ -41,6 +44,7 @@ spec:
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
+            {{- include "oc.events" . | nindent 12 }}
             {{- include "oc.cors" . |nindent 12 }}
 
             - name: OC_RUN_SERVICES
@@ -188,11 +192,35 @@ spec:
             - name: WEB_OPTION_TOKEN_STORAGE_LOCAL
               value: {{ .Values.services.web.config.tokenStorageLocal.enabled | quote }}
 
-            - name: WEB_JWT_SECRET
+            - name: OC_JWT_SECRET
               valueFrom:
                 secretKeyRef:
                   name: {{ include "secrets.jwtSecret" . }}
                   key: jwt-secret
+
+            - name: OC_TRANSFER_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.transferSecret" . }}
+                  key: transfer-secret
+
+            - name: OC_JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.jwtSecret" . }}
+                  key: jwt-secret
+
+            - name: OC_MACHINE_AUTH_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.machineAuthAPIKeySecret" . }}
+                  key: machine-auth-api-key
+
+            - name: OC_SYSTEM_USER_ID
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.storageSystemSecret" . }}
+                  key: user-id
 
             {{- include "oc.caEnv" $ | nindent 12}}
 
@@ -209,6 +237,9 @@ spec:
           volumeMounts:
             - name: configs
               mountPath: /etc/opencloud
+            - name: messaging-system-ca
+              mountPath: /etc/opencloud/messaging-system-ca
+              readOnly: true
             {{- if .Values.configRefs.webThemeConfigRef }}
             - name: theme
               mountPath: "/var/lib/opencloud/web/assets/themes/{{ .Values.services.web.config.theme.themeNameConfigRefs }}"
@@ -228,6 +259,13 @@ spec:
         - name: configs
           configMap:
             name: {{ .appName }}-config
+        - name: messaging-system-ca
+          {{ if and (.Values.messagingSystem.external.enabled) (not .Values.messagingSystem.external.tls.certTrusted) }}
+          secret:
+            secretName: {{ include "secrets.messagingSystemCASecret" . }}
+          {{ else }}
+          emptyDir: {}
+          {{ end }}
         {{- with .Values.configRefs.webThemeConfigRef }}
         - name: theme
           configMap:
