--- a/charts/opencloud-microservices/templates/activitylog/deployment.yaml
+++ b/charts/opencloud-microservices/templates/activitylog/deployment.yaml
@@ -55,22 +55,41 @@ spec:
             - name: ACTIVITYLOG_DEBUG_ADDR
               value: 0.0.0.0:9197
 
-            - name: ACTIVITYLOG_SERVICE_ACCOUNT_ID
+            - name: OC_SERVICE_ACCOUNT_ID
               valueFrom:
                 configMapKeyRef:
                   name: {{ include "config.authService" . }}
                   key: service-account-id
-            - name: ACTIVITYLOG_SERVICE_ACCOUNT_SECRET
+
+            - name: OC_SERVICE_ACCOUNT_SECRET
               valueFrom:
                 secretKeyRef:
                   name: {{ include "secrets.serviceAccountSecret" . }}
                   key: service-account-secret
 
-            - name: ACTIVITYLOG_JWT_SECRET
+            - name: OC_TRANSFER_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.transferSecret" . }}
+                  key: transfer-secret
+
+            - name: OC_JWT_SECRET
               valueFrom:
                 secretKeyRef:
                   name: {{ include "secrets.jwtSecret" . }}
                   key: jwt-secret
+
+            - name: OC_MACHINE_AUTH_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.machineAuthAPIKeySecret" . }}
+                  key: machine-auth-api-key
+
+            - name: OC_SYSTEM_USER_ID
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.storageSystemSecret" . }}
+                  key: user-id
 
           {{- include "oc.livenessProbe" . | nindent 10 }}
 
