--- a/charts/opencloud-microservices/templates/audit/deployment.yaml
+++ b/charts/opencloud-microservices/templates/audit/deployment.yaml
@@ -48,11 +48,36 @@ spec:
 
             - name: AUDIT_DEBUG_PPROF
               value: {{ .Values.debug.profiling | quote }}
+
             - name: AUDIT_DEBUG_ADDR
               value: 0.0.0.0:9229
 
             - name: AUDIT_LOG_TO_CONSOLE
               value: "true"
+
+            - name: OC_TRANSFER_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.transferSecret" . }}
+                  key: transfer-secret
+
+            - name: OC_JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.jwtSecret" . }}
+                  key: jwt-secret
+
+            - name: OC_MACHINE_AUTH_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.machineAuthAPIKeySecret" . }}
+                  key: machine-auth-api-key
+
+            - name: OC_SYSTEM_USER_ID
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.storageSystemSecret" . }}
+                  key: user-id
 
             {{- include "oc.caEnv" $ | nindent 12}}
 
