--- a/charts/opencloud-microservices/templates/notifications/deployment.yaml
+++ b/charts/opencloud-microservices/templates/notifications/deployment.yaml
@@ -85,12 +85,13 @@ spec:
             - name: NOTIFICATIONS_WEB_UI_URL
               value: "https://{{ .Values.externalDomain }}"
 
-            - name: NOTIFICATIONS_SERVICE_ACCOUNT_ID
+            - name: OC_SERVICE_ACCOUNT_ID
               valueFrom:
                 configMapKeyRef:
                   name: {{ include "config.authService" . }}
                   key: service-account-id
-            - name: NOTIFICATIONS_SERVICE_ACCOUNT_SECRET
+
+            - name: OC_SERVICE_ACCOUNT_SECRET
               valueFrom:
                 secretKeyRef:
                   name: {{ include "secrets.serviceAccountSecret" . }}
