--- a/charts/opencloud-microservices/templates/ocdav/deployment.yaml
+++ b/charts/opencloud-microservices/templates/ocdav/deployment.yaml
@@ -24,6 +24,7 @@ spec:
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
+            {{- include "oc.events" . | nindent 12 }}
             {{- include "oc.cors" . |nindent 12 }}
 
             - name: OC_RUN_SERVICES
@@ -62,17 +63,29 @@ spec:
             - name: OCDAV_INSECURE
               value: {{ .Values.insecure.ocHttpApiInsecure | quote }}
 
-            - name: OCDAV_JWT_SECRET
+            - name: OC_TRANSFER_SECRET
               valueFrom:
                 secretKeyRef:
-                  name: {{ include "secrets.jwtSecret" . }}
+                  name: {{ include "secrets.transferSecret" . }}
+                  key: transfer-secret
+
+            - name: OC_JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{include "secrets.jwtSecret" . }}
                   key: jwt-secret
 
-            - name: OCDAV_MACHINE_AUTH_API_KEY
+            - name: OC_MACHINE_AUTH_API_KEY
               valueFrom:
                 secretKeyRef:
                   name: {{ include "secrets.machineAuthAPIKeySecret" . }}
                   key: machine-auth-api-key
+
+            - name: OC_SYSTEM_USER_ID
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.storageSystemSecret" . }}
+                  key: user-id
 
             - name: OC_URL_SIGNING_SECRET
               valueFrom:
@@ -93,7 +106,17 @@ spec:
 
           volumeMounts:
             {{- include "oc.caPath" $ | nindent 12}}
+          - name: messaging-system-ca
+            mountPath: /etc/opencloud/messaging-system-ca
+            readOnly: true
 
       {{- include "oc.imagePullSecrets" $ | nindent 6 }}
       volumes:
         {{- include "oc.caVolume" $ | nindent 8}}
+        - name: messaging-system-ca
+          {{ if and (.Values.messagingSystem.external.enabled) (not .Values.messagingSystem.external.tls.certTrusted) }}
+          secret:
+            secretName: {{ include "secrets.messagingSystemCASecret" . }}
+          {{ else }}
+          emptyDir: {}
+          {{ end }}
