--- a/charts/opencloud-microservices/templates/ocm/deployment.yaml
+++ b/charts/opencloud-microservices/templates/ocm/deployment.yaml
@@ -71,7 +71,7 @@ spec:
             - name: OCM_OCM_INVITE_MANAGER_TIMEOUT
               value: {{ .Values.features.ocm.requestTimeout | quote }}
 
-            - name: OCM_JWT_SECRET
+            - name: OC_JWT_SECRET
               valueFrom:
                 secretKeyRef:
                   name: "jwt-secret"
@@ -84,12 +84,13 @@ spec:
             - name: OCM_OCM_SHARE_PROVIDER_INSECURE
               value: {{ .Values.insecure.ocmInsecure | quote }}
 
-            - name: OCM_SERVICE_ACCOUNT_ID
+            - name: OC_SERVICE_ACCOUNT_ID
               valueFrom:
                 configMapKeyRef:
                   name: {{ include "config.authService" . }}
                   key: service-account-id
-            - name: OCM_SERVICE_ACCOUNT_SECRET
+
+            - name: OC_SERVICE_ACCOUNT_SECRET
               valueFrom:
                 secretKeyRef:
                   name: {{ include "secrets.serviceAccountSecret" . }}
