--- a/charts/opencloud-microservices/templates/storagesystem/deployment.yaml
+++ b/charts/opencloud-microservices/templates/storagesystem/deployment.yaml
@@ -24,6 +24,9 @@ spec:
           volumeMounts:
           - name: {{ include "oc.persistence.dataVolumeName" . }}
             mountPath: /var/lib/opencloud
+          - name: messaging-system-ca
+            mountPath: /etc/opencloud/messaging-system-ca
+            readOnly: true
       {{ end }}
       {{- include "oc.priorityClassName" $.priorityClassName | nindent 6 }}
       {{- include "oc.hostAliases" $ | nindent 6 }}
@@ -36,6 +39,7 @@ spec:
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
+            {{- include "oc.events" . | nindent 12 }}
             {{- include "oc.cacheStore" . | nindent 12 }}
 
             - name: OC_RUN_SERVICES
@@ -76,17 +80,29 @@ spec:
             - name: STORAGE_SYSTEM_DRIVER
               value: decomposed
 
-            - name: STORAGE_SYSTEM_JWT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "secrets.storageSystemJWTSecret" . }}
-                  key: storage-system-jwt-secret
-
             - name: OC_SYSTEM_USER_API_KEY
               valueFrom:
                 secretKeyRef:
                   name: {{ include "secrets.storageSystemSecret" . }}
                   key: api-key
+
+            - name: OC_TRANSFER_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.transferSecret" . }}
+                  key: transfer-secret
+
+            - name: OC_JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.jwtSecret" . }}
+                  key: jwt-secret
+
+            - name: OC_MACHINE_AUTH_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "secrets.machineAuthAPIKeySecret" . }}
+                  key: machine-auth-api-key
 
             - name: OC_SYSTEM_USER_ID
               valueFrom:
@@ -114,6 +130,9 @@ spec:
             - name: {{ include "oc.persistence.dataVolumeName" . }}
               mountPath: /var/lib/opencloud
             {{- include "oc.caPath" $ | nindent 12}}
+            - name: messaging-system-ca
+              mountPath: /etc/opencloud/messaging-system-ca
+              readOnly: true
 
       {{- include "oc.imagePullSecrets" $ | nindent 6 }}
       volumes:
@@ -121,3 +140,10 @@ spec:
           emptyDir: {}
         {{- include "oc.caVolume" $ | nindent 8}}
         {{- include "oc.persistence.dataVolume" . | nindent 8 }}
+        - name: messaging-system-ca
+          {{ if and (.Values.messagingSystem.external.enabled) (not .Values.messagingSystem.external.tls.certTrusted) }}
+          secret:
+            secretName: {{ include "secrets.messagingSystemCASecret" . }}
+          {{ else }}
+          emptyDir: {}
+          {{ end }}
