--- a/charts/opencloud-microservices/templates/storageusers/jobs.yaml
+++ b/charts/opencloud-microservices/templates/storageusers/jobs.yaml
@@ -99,12 +99,13 @@ spec:
                       name: {{ include "config.storageUsers" . }}
                       key: storage-uuid
 
-                - name: STORAGE_USERS_SERVICE_ACCOUNT_ID
+                - name: OC_SERVICE_ACCOUNT_ID
                   valueFrom:
                     configMapKeyRef:
                       name: {{ include "config.authService" . }}
                       key: service-account-id
-                - name: STORAGE_USERS_SERVICE_ACCOUNT_SECRET
+
+                - name: OC_SERVICE_ACCOUNT_SECRET
                   valueFrom:
                     secretKeyRef:
                       name: {{ include "secrets.serviceAccountSecret" . }}
@@ -186,7 +187,7 @@ spec:
                 - name: STORAGE_USERS_LOG_PRETTY
                   value: {{ .Values.logging.pretty | quote }}
 
-                - name: STORAGE_USERS_JWT_SECRET
+                - name: OC_JWT_SECRET
                   valueFrom:
                     secretKeyRef:
                       name: {{ include "secrets.jwtSecret" . }}
@@ -204,12 +205,12 @@ spec:
                       name: {{ include "config.storageUsers" . }}
                       key: storage-uuid
 
-                - name: STORAGE_USERS_SERVICE_ACCOUNT_ID
+                - name: OC_SERVICE_ACCOUNT_ID
                   valueFrom:
                     configMapKeyRef:
                       name: {{ include "config.authService" . }}
                       key: service-account-id
-                - name: STORAGE_USERS_SERVICE_ACCOUNT_SECRET
+                - name: OC_SERVICE_ACCOUNT_SECRET
                   valueFrom:
                     secretKeyRef:
                       name: {{ include "secrets.serviceAccountSecret" . }}
@@ -292,7 +293,7 @@ spec:
                 - name: STORAGE_USERS_LOG_PRETTY
                   value: {{ .Values.logging.pretty | quote }}
 
-                - name: STORAGE_USERS_JWT_SECRET
+                - name: OC_JWT_SECRET
                   valueFrom:
                     secretKeyRef:
                       name: {{ include "secrets.jwtSecret" . }}
@@ -310,12 +311,12 @@ spec:
                       name: {{ include "config.storageUsers" . }}
                       key: storage-uuid
 
-                - name: STORAGE_USERS_SERVICE_ACCOUNT_ID
+                - name: OC_SERVICE_ACCOUNT_ID
                   valueFrom:
                     configMapKeyRef:
                       name: {{ include "config.authService" . }}
                       key: service-account-id
-                - name: STORAGE_USERS_SERVICE_ACCOUNT_SECRET
+                - name: OC_SERVICE_ACCOUNT_SECRET
                   valueFrom:
                     secretKeyRef:
                       name: {{ include "secrets.serviceAccountSecret" . }}
